--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.8'  
 
@@ -24,9 +24,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt  # 安裝 Python 依賴
 
+    - name: Compress project for scanning
+      run: |
+        zip -r project.zip .  # 將整個專案目錄壓縮成 project.zip
+
     - name: Run Mergebase scan
       env:
         MERGEBASE_API_KEY: ${{ secrets.MERGEBASE_API_KEY }}
       run: |
         curl -X POST https://api.mergebase.com/api/v1/scan \
         -H "Authorization: Bearer $MERGEBASE_API_KEY" \
+        -F "file=@project.zip"  # 指定整個專案的壓縮文件
