--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,6 @@ jobs:
         zip -r project.zip .  # 將整個專案目錄壓縮成 project.zip
 
     - name: Run Mergebase scan
-      env:
-        MERGEBASE_API_KEY: ${{ secrets.MERGEBASE_API_KEY }}
       run: |
-        curl -X POST https://app.mergebase.com/cdAkCZmB7/api/n/scans \
-        -H "Authorization: Bearer $MERGEBASE_API_KEY" \
-        -F "file=@project.zip"  # 指定整個專案的壓縮文件
+        wegt --header="X-Authorization:$MB_TOKEN" https://app.mergebase.com/cdAkCZmB7/api/update/clt/mergebase.jar
+        java -jar mergebase.jar --name=yourAppName . --all`
