--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
 
     - name: Run Mergebase scan
       run: |
-        wegt --header="X-Authorization:$MB_TOKEN" https://app.mergebase.com/cdAkCZmB7/api/update/clt/mergebase.jar
+        wget --header="X-Authorization:$MB_TOKEN" https://app.mergebase.com/cdAkCZmB7/api/update/clt/mergebase.jar
         java -jar mergebase.jar --name=yourAppName . --all`
