--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt  # 安裝 Python 依賴
 
-    - name: Compress project for scanning
-      run: |
-        zip -r project.zip .  # 將整個專案目錄壓縮成 project.zip
 
-    - name: Run Mergebase scan
-      run: |
-        wget --header="X-Authorization:$MB_TOKEN" https://app.mergebase.com/cdAkCZmB7/api/update/clt/mergebase.jar
-        java -jar mergebase.jar --name=yourAppName . --all`
+    - name: MergeBase
+      uses: mergebase/mergebase-scan-action@1.0.4
+            
